# barakahtraderlite

./: .gitignore  .replit  BMAD_EXECUTION_BEST_PRACTICES.md  DEVELOPMENT_SETUP.md  LESSONS_LEARNED.md  MCP_SETUP_GUIDE.md  PRE_DEVELOPMENT_CHECKLIST.md  README.md  README_MCP.md  TROUBLESHOOTING_GUIDE.md  codacy-fixes.patch  codacy-setup.md  env.example  fix_vault_key.sh  next.config.ts  package-lock.json  package.json  pyproject.toml  replit.md  set-codacy-env.ps1  setup-codacy.ps1  setup-codacy.sh  setup-mcp-env.ps1  test-mermaid.md  validation_report_20250918_032103.json
.bmad-core/: core-config.yaml  install-manifest.yaml
.cursor/rules/: codacy.mdc  use-mcp.mdc
app/: layout.tsx  page.tsx
app/api/: page.tsx
app/api-test/: page.tsx
app/education/: page.tsx
app/quotes/: page.tsx
attached_assets/: Official API documentation links and details_1758567693309.md
backend/: __init__.py  main.py  main_original_backup.py  pytest.ini  requirements.txt
backend/api/: __init__.py
backend/core/: __init__.py  database.py  security.py
backend/models/: education.py  market_data.py  paper_trading.py  progress.py  strategy.py  trading.py
backend/services/: aliceblue_api.py  backtest_engine.py  (+20 more)
docs/: brownfield-architecture.md  deployment-maintenance-plan.md  development-environment-setup.md  development-summary.md  frontend-ui-ux-spec.md  guide-to-setup-fyers-api.md  prd.md  project-brief.md  project-status.md  system-architecture.md  technical-implementation-roadmap.md  technical-roadmap.md  testing-strategy-framework.md
scripts/: setup-mcp.sh  start-mcp.sh
(+135 files in other folders)
