[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "cryptography>=46.0.1",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "keyring>=25.6.0",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "pyotp>=2.9.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "responses>=0.25.8",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.36.0",
]
